--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "clean": "rm -rf dist || true",
-    "build": "npm run clean && tsc",
+    "build": "tsc",
     "start": "node dist/server.js",
+    "clean": "rm -rf dist || true",
+    "prebuild": "npm run clean",
     "render-build": "npm install && npm run build"
   },
   "dependencies": {
@@ -15,15 +16,16 @@
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "puppeteer": "^21.11.0"
+    "puppeteer": "^21.11.0",
+    "typescript": "^5.9.2",
+    "ts-node": "^10.9.0"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.35",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.9.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2"
+    "ts-node-dev": "^2.0.0"
   },
   "keywords": [
     "coffee",
